cmake_minimum_required(VERSION 3.28)
project(Chronicles)

set(CMAKE_CXX_STANDARD 17)

add_executable(Triangles Triangles.cpp
        Triangles.cpp)
add_executable(DanceMooves DanceMooves.cpp
        DanceMooves.cpp)
add_executable(SpacedOut SpacedOut.cpp
        SpacedOut.cpp)
add_executable(MooBuzz MooBuzz.cpp
        MooBuzz.cpp)
add_executable(BerryPicking BerryPicking.cpp
        BerryPicking.cpp)
add_executable(LeftOver LeftOver.cpp)
add_executable(MooCereal MooCereal.cpp)
add_executable(TheGreatRevegetation TheGreatRevegetation.cpp)
add_executable(GrassPlanting GrassPlanting.cpp)
add_executable(LemonadeLine LemonadeLine.cpp)
add_executable(RestStops RestStops.cpp)